<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.ui.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_background"
        android:padding="16dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imBack"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/josefinsans_medium"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/photoContainer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/girl"
            app:civ_border_color="@color/color_corner"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/igAddPhoto"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="-5dp"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bottom_account_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/bottom_nav_background"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/bottom_nav_background"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edUserMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Phone"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/bottom_nav_background"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edUserNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Phone"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/bottom_nav_background"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edUserBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_date_birthday"
            android:inputType="date"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>