<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="16dp"
    tools:context=".view.ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/flBackdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/shape_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFavorite"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="end|top"
                android:layout_margin="16dp"
                android:background="@drawable/shape_circle"
                android:src="@drawable/saved"
                android:tint="@color/color_corner" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/flBackdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flBackdrop">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPoster"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieTitleValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/josefinsans_bold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/flBackdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/flBackdrop" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_vote_average"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:translationZ="9dp"
            app:layout_constraintBottom_toTopOf="@+id/tvMovieTitleValue"
            app:layout_constraintEnd_toEndOf="parent">

            <RatingBar
                android:id="@+id/ratingFilm"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:numStars="5"
                android:progressTint="@color/white"
                android:rating="4.5"
                android:secondaryProgressTint="@color/white"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/josefinsans_regular"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="8.9" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvGnreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/josefinsans_medium"
            android:maxLines="1"
            android:textColor="@color/white_80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitleValue"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleValue" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/josefinsans_medium"
            android:gravity="center"
            android:textColor="@color/color_corner"
            app:layout_constraintStart_toStartOf="@+id/tvGnreValue"
            app:layout_constraintTop_toBottomOf="@+id/tvGnreValue" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_medium"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescriptionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/josefinsans_medium"
                android:textColor="@color/white_80"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

            <TextView
                android:id="@+id/tvActorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/josefinsans_medium"
                android:text="@string/actors"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionValue" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvActorsTitle"
                tools:listitem="@layout/actor_view_layout"
                tools:orientation="horizontal" />

            <Button
                android:id="@+id/btnBuy"
                style="@style/MovieButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/josefinsans_bold"
                android:text="@string/buy_ticket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_actors"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.scientisthamsterssofiandjohn.samoyedtv.view.customview.OverlapLoadingView
            android:id="@+id/loadingView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

        </com.scientisthamsterssofiandjohn.samoyedtv.view.customview.OverlapLoadingView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>